1-single-istio/result/namespaces.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      openshift.io/description: ""
      openshift.io/display-name: ""
      openshift.io/requester: system:admin
      openshift.io/sa.scc.mcs: s0:c26,c15
      openshift.io/sa.scc.supplemental-groups: 1000680000/10000
      openshift.io/sa.scc.uid-range: 1000680000/10000
    creationTimestamp: "2023-03-07T08:55:04Z"
    labels:
      kubernetes.io/metadata.name: istio-system
      maistra.io/ignore-namespace: ignore
      maistra.io/member-of: istio-system
      pod-security.kubernetes.io/audit: restricted
      pod-security.kubernetes.io/audit-version: v1.24
      pod-security.kubernetes.io/warn: restricted
      pod-security.kubernetes.io/warn-version: v1.24
    name: istio-system
    resourceVersion: "73004"
    uid: b1902275-938b-48b6-900d-06fd868581f0
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      openshift.io/sa.scc.mcs: s0:c27,c4
      openshift.io/sa.scc.supplemental-groups: 1000710000/10000
      openshift.io/sa.scc.uid-range: 1000710000/10000
    creationTimestamp: "2023-03-07T08:58:46Z"
    labels:
      knative.openshift.io/part-of: openshift-serverless
      kubernetes.io/metadata.name: knative-serving
      maistra.io/member-of: istio-system
      openshift.io/cluster-monitoring: "false"
      pod-security.kubernetes.io/audit: restricted
      pod-security.kubernetes.io/audit-version: v1.24
      pod-security.kubernetes.io/warn: restricted
      pod-security.kubernetes.io/warn-version: v1.24
    name: knative-serving
    resourceVersion: "79105"
    uid: 6a388ecc-ceae-43c4-a982-3689415b1425
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      openshift.io/description: ""
      openshift.io/display-name: ""
      openshift.io/requester: system:admin
      openshift.io/sa.scc.mcs: s0:c27,c9
      openshift.io/sa.scc.supplemental-groups: 1000720000/10000
      openshift.io/sa.scc.uid-range: 1000720000/10000
    creationTimestamp: "2023-03-07T08:59:31Z"
    labels:
      kubernetes.io/metadata.name: demo
      maistra.io/member-of: istio-system
      pod-security.kubernetes.io/audit: restricted
      pod-security.kubernetes.io/audit-version: v1.24
      pod-security.kubernetes.io/warn: restricted
      pod-security.kubernetes.io/warn-version: v1.24
    name: demo
    resourceVersion: "76357"
    uid: bac980d6-dab2-4c24-b81d-2ea992cc6808
  spec:
    finalizers:
    - kubernetes
  status:
    phase: Active
kind: List
metadata:
  resourceVersion: ""
